--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h2>What?</h2>
         <p><a href="http://sass-lang.com">Sass</a> is a pre-processing language for CSS. It allows you to write cleaner stylesheets and makes collaboration on your CSS a breeze. There's a ton of information on Sass out there, so we won't repeat it all here. Just make sure to check out <a href="http://sass-lang.com" target="_blank">the Sass site</a> for tutorials and examples.</p>
         <p>Sass was originally written in Ruby. Ruby's great, but people started having a couple of issues. First, we want everyone to enjoy Sass, no matter what language they use. Why restrict everyone to using Ruby? In addition, Ruby can be kind of slow. Lowering compile time for users is important. Enter LibSass.</p>
-        <p>LibSass is a C/C++ port of the Sass engine. The point is to be simple, fast, and easy to integrate. Find out more about the project over at <a href="http://github.com/hcatlin/libsass">Github</a>.</p>
+        <p>LibSass is a C/C++ port of the Sass engine. The point is to be simple, fast, and easy to integrate. Find out more about the project over at <a href="https://github.com/hcatlin/libsass">Github</a>.</p>
       </section>
       <section id="sassc">
         <h2>SassC</h2>
@@ -72,7 +72,7 @@
       </section>
       <section id="about">
         <h2>About</h2>
-        <p>This project is the brainchild of <a href="http://twitter.com/hcatlin">Hampton Catlin</a>, the original creator of Sass, and is sponsored by <a href="http://moovweb.com">Moovweb</a>. <a href="http://github.com/akhleung">Aaron Leung</a> from Moovweb is the primary developer. The site and logo were designed by <a href="http://twitter.com/colinjohnston">Colin Johnston</a>.</p>
+        <p>This project is the brainchild of <a href="https://twitter.com/hcatlin">Hampton Catlin</a>, the original creator of Sass, and is sponsored by <a href="http://moovweb.com">Moovweb</a>. <a href="https://github.com/akhleung">Aaron Leung</a> from Moovweb is the primary developer. The site and logo were designed by <a href="https://twitter.com/colinjohnston">Colin Johnston</a>.</p>
       </section>
 
     </div>
